--- a/angular/myTasks/shopApp/src/app/home/home.component.css
+++ b/angular/myTasks/shopApp/src/app/home/home.component.css
@@ -46,6 +46,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  justify-content: center;
 }
 
 .product {
@@ -57,7 +58,17 @@
   box-sizing: border-box;
   width: calc(33% - 20px);
 }
-
+@media (max-width: 767px) {
+  .product {
+    width: 80%;
+  }
+  .advsection .container .image {
+    display: none;
+  }
+  .advsection .container .text-content {
+    width: 100%;
+  }
+}
 .product img {
   max-width: 200px;
   border-radius: 8px;
