1- done from required improvement 2- done from creating footer and header components 3- create services for user authentication, product, and services 4- done from cart system

--- a/angular/myTasks/shopApp/src/app/app.component.html
+++ b/angular/myTasks/shopApp/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div>
+  <!-- Header Compnent -->
+  <app-header></app-header>
+  <!-- App components -->
+  <router-outlet></router-outlet>
+  <!-- Footer Component -->
+  <app-footer></app-footer>
+</div>
