--- a/angular/myTasks/shopApp/src/app/home/home.component.html
+++ b/angular/myTasks/shopApp/src/app/home/home.component.html
@@ -1,9 +1,6 @@
 <div class="advsection">
   <div class="container">
-
-
     <div class="text-content">
-
       <h1>
         Welcome to our, Shop!!
       </h1>
@@ -19,28 +16,20 @@
       </button>
 
 
+
     </div>
     <div class="image">
-
       <img src="assets/images/slider-img.png" alt="">
     </div>
-
-    <!-- products -->
-
   </div>
-
 </div>
-
+<!-- products -->
 <div class="product-list">
-
-
   <div class="product" *ngFor="let product of products">
-
     <img width="" [src]="product.pictureUrl" alt="{{ product.name }}" />
     <h2>{{ product.name }}</h2>
     <p>{{ product.description }}</p>
     <p>{{ product.price }}</p>
-    <button>Add to cart</button>
-
+    <button (click)="addToCart(product.id)">Add to cart</button>
   </div>
 </div>
