--- a/angular/myTasks/shopApp/src/app/registarion/registarion.component.html
+++ b/angular/myTasks/shopApp/src/app/registarion/registarion.component.html
@@ -1,42 +1,37 @@
 <div class="registation">
-
-
-
   <div class="container">
+    <div>
+      <h4>
+        Register now
+      </h4>
+    </div>
 
-    <h1>
-
-    </h1>
-
-    <h4>
-      Register now
-    </h4>
-
+    <!-- i try to use  *ngIf="registrationForm.valid"   but the form disappeared-->
     <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
 
-      <label for="firstName">First Name</label>
-      <input id="firstName" formControlName="firstName" required>
 
+      <div class="mb-3">
+        <label for="firstName" class="form-label">First Name</label>
+        <input formControlName="firstName" type="text" class="form-control" id="firstName">
+      </div>
+      <div class="mb-3">
+        <label for="lastName" class="form-label">Last Name</label>
+        <input formControlName="lastName" type="text" class="form-control" id="lastName" required>
+      </div>
 
-      <label for="lastName">Last Name</label>
-      <input id="lastName" formControlName="lastName" required>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input formControlName="email" type="email" class="form-control" id="email" required>
+      </div>
 
-      <label for="email">Email</label>
-      <input id="email" formControlName="email" required>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input formControlName="password" type="password" class="form-control" id="password">
+      </div>
 
-      <label for="password">Password</label>
-      <input id="password" type="password" formControlName="password" required>
 
       <button type="submit">Save</button>
       <p>Have an account? <a href="" routerLink="/login">Login</a></p>
     </form>
-
-
-
-
-
   </div>
-
-
-
 </div>
