change the design for product and cart component

--- a/angular/myTasks/shopApp/src/app/cart/cart.component.css
+++ b/angular/myTasks/shopApp/src/app/cart/cart.component.css
@@ -1,61 +1,163 @@
-.cart-list {
-}
-
-.cart-products {
-  padding: 10px;
-  margin-bottom: 5px;
-
-  border: 1px solid black;
-  width: 100vh;
-  height: 30vh;
-  position: relative;
-  align-items: center;
-}
-
-.cart-products .image {
-  position: relative;
-}
-
-.cart-products .image img {
-  max-width: 150px;
-}
-
-.cart-products .btn-product {
-  position: absolute;
-  bottom: 3px;
-}
-.cart-products .btn-product button {
+.button {
   background-color: white;
   border: 1px solid grey;
   border-radius: 5px;
 }
 
-.cart-products .price-qty {
-  position: absolute;
-  margin-top: auto;
-  margin-bottom: auto;
-  right: 20px;
-}
-
-.qty {
-  border: 1px solid black;
-  width: 35px;
-  height: 35px;
+body {
+  background: #ddd;
+  min-height: 100vh;
+  vertical-align: middle;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: auto;
-
-  position: relative;
+  font-family: sans-serif;
+  font-size: 0.8rem;
+  font-weight: bold;
 }
-.qty input {
-  text-align: center;
-  width: inherit;
-  height: inherit;
+.title {
+  margin-bottom: 5vh;
 }
-
-.cart-products .price-qty button {
-  border: 1px solid white;
+.card {
+  margin: auto;
+  max-width: 90%;
+  width: 90%;
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 1rem;
+  border: transparent;
+}
+@media (max-width: 767px) {
+  .card {
+    margin: 3vh auto;
+  }
+}
+.cart {
+  background-color: #fff;
+  padding: 4vh 5vh;
+  border-bottom-left-radius: 1rem;
+  border-top-left-radius: 1rem;
+}
+@media (max-width: 767px) {
+  .cart {
+    padding: 4vh;
+    border-bottom-left-radius: unset;
+    border-top-right-radius: 1rem;
+  }
+}
+.summary {
+  background-color: #ddd;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  padding: 4vh;
+  color: rgb(65, 65, 65);
+}
+@media (max-width: 767px) {
+  .summary {
+    border-top-right-radius: unset;
+    border-bottom-left-radius: 1rem;
+  }
+}
+.summary .col-2 {
+  padding: 0;
+}
+.summary .col-10 {
+  padding: 0;
+}
+.row {
+  margin: 0;
+}
+.title b {
+  font-size: 1.5rem;
+}
+.main {
+  margin: 0;
+  padding: 2vh 0;
+  width: 100%;
+}
+.col-2,
+.col {
+  padding: 0 1vh;
+}
+a {
+  padding: 0 1vh;
+}
+.close {
+  margin-left: auto;
+  font-size: 0.7rem;
+}
+img {
+  width: 3.5rem;
+}
+.back-to-shop {
+  margin-top: 4.5rem;
+  position: absolute;
+  bottom: 20px;
+}
+h5 {
+  margin-top: 4vh;
+}
+hr {
+  margin-top: 1.25rem;
+}
+form {
+  padding: 2vh 0;
+}
+select {
+  border: 1px solid rgba(0, 0, 0, 0.137);
+  padding: 1.5vh 1vh;
+  margin-bottom: 4vh;
+  outline: none;
+  width: 100%;
+  background-color: rgb(247, 247, 247);
+}
+input {
+  border: 1px solid rgba(0, 0, 0, 0.137);
+  padding: 1vh;
+  margin-bottom: 4vh;
+  outline: none;
+  width: 100%;
+  background-color: rgb(247, 247, 247);
+}
+input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+.btn {
+  background-color: #000;
+  border-color: #000;
+  color: white;
+  width: 100%;
+  font-size: 0.7rem;
+  margin-top: 4vh;
+  padding: 1vh;
   border-radius: 5px;
-  background-color: grey;
+  font-weight: bold;
+}
+.btn:focus {
+  box-shadow: none;
+  outline: none;
+  box-shadow: none;
+  color: white;
+  -webkit-box-shadow: none;
+  -webkit-user-select: none;
+  transition: none;
+}
+.btn:hover {
+  background-color: white;
+  color: #000;
+}
+a {
+  color: black;
+}
+a:hover {
+  color: black;
+  text-decoration: none;
+}
+#code {
+  background-image: linear-gradient(
+      to left,
+      rgba(255, 255, 255, 0.253),
+      rgba(255, 255, 255, 0.185)
+    ),
+    url("https://img.icons8.com/small/16/000000/long-arrow-right.png");
+  background-repeat: no-repeat;
+  background-position-x: 95%;
+  background-position-y: center;
 }
