--- a/angular/myTasks/shopApp/src/app/cart/cart.component.html
+++ b/angular/myTasks/shopApp/src/app/cart/cart.component.html
@@ -1,67 +1,77 @@
-<div class="cart">
-
-  <div class="container py-4  ">
-
-    <h4>Cart <span>({{cart.length}} items)</span></h4>
-
-
-    <div class="cart-list">
-
-      <div class="cart-products d-flex" *ngFor="let c of cart">
-
-        <div class="image">
-          <img src={{c.pictureUrl}} alt="product">
+<div class="card my-4 ">
+  <div class="row">
+    <div class="col-md-8 cart">
+      <div class="title">
+        <div class="row">
+          <div class="col">
+            <h4><b>Shopping Cart</b></h4>
+          </div>
+          <div class="col align-self-center text-right text-muted">{{cart.length}} items</div>
         </div>
-        <div class="text-content">
-          <h6> {{c.name}}</h6>
-          <p> {{c.description}}</p>
+      </div>
+      <div *ngIf="cart.length == 0">
+        <p>Empty Cart</p>
+      </div>
+      <div class="row border-top border-bottom" *ngFor="let c of cart">
+        <div class="row main align-items-center">
+          <div class="col-2"><img class="img-fluid" src={{c.pictureUrl}}></div>
+          <div class="col">
+            <div class="row text-muted"> {{c.name}}</div>
+            <div class="row">{{c.description}}</div>
+          </div>
+          <div class="col">
+            <a href="/cart" (click)="updateQuantity(c.id, 'minus')">-</a><a href="/cart"
+              class="border">{{c.quantity}}</a><a href="/cart" (click)="updateQuantity(c.id, 'add')">+</a>
+          </div>
+          <div class="col"> {{c.price}} <span class="close">SAR</span></div>
 
-          <div class="btn-product">
-            <button class="mx-2" (click)="remoiveItem(c.id)">
+          <div class="col">
+            <button class="mx-2 button" (click)="remoiveItem(c.id)">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3"
                 viewBox="0 0 16 16">
                 <path
                   d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
               </svg>
-              Remove</button>
-            <button>
+            </button>
+            <button class="button">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
                 viewBox="0 0 16 16">
                 <path
                   d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
               </svg>
-              Add to wishlist</button>
+            </button>
+
           </div>
         </div>
-        <div class="price-qty">
-
-
-          <div class="d-flex"><span>SAR</span>
-            <h4>{{c.price}}</h4>
-          </div>
-
-          <div class="d-flex">
-            <p class="mx-2">QTY</p>
-
-            <div class="qty mx-1">
-              <input type="number" [formControl]="number" [value]="c.quantity"
-                [placeholder]="c.quantity ? c.quantity : 1">
-
-
-            </div>
-            <button (click)="updateQuantity(c.id)"> Add</button>
-
-          </div>
-
-        </div>
-
-
-
-
-
       </div>
-    </div>
 
+
+      <div class="back-to-shop" [routerLink]="['/home']" routerLinkActive="router-link-active"><a
+          href="#">&leftarrow;</a><span class="text-muted">Back to shop</span></div>
+    </div>
+    <div class="col-md-4 summary" *ngIf="cart.length != 0">
+      <div>
+        <h5><b>Summary</b></h5>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col" style="padding-left:0;">{{cart.length}} items</div>
+        <div class="col text-right">SAR {{getTotal()}}</div>
+      </div>
+      <form>
+        <p>SHIPPING</p>
+        <select>
+          <option class="text-muted">Standard-Delivery- SAR 5.00</option>
+        </select>
+        <p>GIVE CODE</p>
+        <input id="code" placeholder="Enter your code">
+      </form>
+      <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
+        <div class="col">TOTAL PRICE</div>
+        <div class="col text-right">SAR {{getTotal()}}</div>
+      </div>
+      <button class="btn">CHECKOUT</button>
+    </div>
   </div>
 
 </div>
